--- a/style.css
+++ b/style.css
@@ -113,6 +113,58 @@
   line-height: 19.2px;
   font-size: small;
 }
+.sec-c {
+  margin: 50px;
+}
+.h1-c{
+  
+font-size: 50px;
+font-weight: 600;
+line-height: 60px;
+text-align: left;
+
+}
+.p-c{
+  
+font-size: 16px;
+font-weight: 400;
+line-height: 19.2px;
+text-align: left;
+
+}
+.card-img-top{
+  margin-top: -23px;
+  width:373px;
+  height: 263px;
+  
+  border-radius: 14px 0px 0px 0px;
+  
+  
+}
+.card{
+  width: 373px !important;
+height: 438px !important;
+
+border-radius: 14px 0px 0px 0px;
+border: 1px solid #bebebe;
+
+}
+.card-text{
+  
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+text-align: left;
+
+}
+.card-title{
+ 
+font-size: 21px;
+font-weight: 600;
+line-height: 25.2px;
+text-align: left;
+
+}
 @media screen and (min-width: 200px) and (max-width: 480px) {
   .hidden {
     overflow: hidden;
@@ -145,6 +197,7 @@
     
     height: 45px;
   }
+ 
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
   .hidden {
@@ -170,6 +223,7 @@
     width: 50px;
     height: 50px;
   }
+ 
 }
 @media screen and (min-width: 769px) and (max-width: 1279px) {
   .hidden {
